--- a/src/main/resources/templates/user/join.html
+++ b/src/main/resources/templates/user/join.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang = "ko">
+<head>
 <meta charset="UTF-8">
 <title>회원가입</title>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
@@ -8,16 +9,40 @@
 <body>
 	
 	
-	<div id="wrap" class="bg-danger d-flex justify-content-center align-items-center">
+	<div id="wrap" class="d-flex justify-content-center align-items-center">
 		<div>
-			<section class="joinContents bg-primary">
-				<div class="logoheader">
+			<section class="joinContents border">
+				<div class="logoheader d-flex  justify-content-center align-items-center">
 					Marondalgram
 				</div>
-				<input class="form-control">
+				<div class="d-flex justify-content-center align-items-center text-center">
+				    <div class="description-join">친구들의 사진과 동영상을 보려면 가입하세요</div>
+				</div>
+				<div class="d-flex email-form">
+				    <input type="text" class="form-control" placeholder = "이메일 주소">
+				    <button type="button" class="btn btn-primary duplicate-btn col-4">중복 확인</button>
+				</div>
+				<input type="text" class="form-control input-form-join" placeholder = "성명">
+				<div class="d-flex input-form-join">
+				    <input type="text" class="form-control" placeholder = "닉네임">
+				    <button type="button" class="btn btn-primary duplicate-btn col-4">중복 확인</button>
+				</div>
+				<input type="password" class="form-control input-form-join" placeholder = "비밀번호">
+				
+				<div class="d-flex justify-content-center align-items-center">
+				    <div class="description-more-join text-center d-flex align-items-center">
+                        저희 서비스를 이용하는 사람이 회원님의 연락처 정보를 marondalstagram에 업로드 했을 수도 있습니다.
+                        더 알아보기
+                    </div>
+				</div>
+				
+				<button type = "button" class="btn btn-block btn-primary join-button">가입하기</button>
+				
 			</section>
-			<section class="loginjoin bg-info">
 			
+			<section class="loginjoin border d-flex justify-content-center align-items-center">
+			     <div>계정이 있으신가요?</div>
+			     <a href="#">로그인</a>
 			</section>
 		</div>
 		
