--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -2,12 +2,50 @@
 <html lang = "ko">
 <head>
 <meta charset="UTF-8">
-<title>회원가입</title>
+<title>로그인</title>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
 <link rel="stylesheet" href="/static/css/style.css">
 <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css"></head>
 <body>
-    <div id="wrap" class="bg-danger"></div>
+    <div id="wrap" class="d-flex justify-content-center align-items-center">
+        <div>
+            <img src="https://cdn.pixabay.com/photo/2024/05/04/01/25/white-tailed-eagle-8738135_1280.jpg" class="login-image">
+        </div>
+        <div class="loginsection">
+            <section class="loginContents border border">
+                <div class="logoheader d-flex  justify-content-center align-items-center">
+                    Marondalgram
+                </div>
+                
+                <div class="d-flex justify-content-center align-items-center text-center">
+                    <div class="description-join">친구들의 사진과 동영상을 보려면 로그인하세요</div>
+                </div>
+                
+                <input type="text" class="form-control email-form" placeholder = "닉네임 또는 이메일">
+                <input type="password" class="form-control input-form-join" placeholder = "비밀번호">
+                
+                <button type = "button" class="btn btn-block btn-primary join-button">가입하기</button>
+                
+                <div class="find-password d-flex justify-content-center align-items-center">
+                    비밀번호를 잊으셨나요?
+                </div>
+                
+            </section>
+            
+            <section class="loginjoin border d-flex justify-content-center align-items-center">
+                 <div>계정이 없으신가요?</div>
+                 <a href="#">회원가입</a>
+            </section>
+        </div>
+    
+    </div>
+
+
+
+
+
+
+
 
     <script
       src="https://code.jquery.com/jquery-3.7.1.min.js"
