--- a/src/main/resources/templates/user/join.html
+++ b/src/main/resources/templates/user/join.html
@@ -19,24 +19,26 @@
 				    <div class="description-join">친구들의 사진과 동영상을 보려면 가입하세요</div>
 				</div>
 				<div class="d-flex email-form">
-				    <input type="text" class="form-control" placeholder = "이메일 주소">
-				    <button type="button" class="btn btn-primary duplicate-btn col-4">중복 확인</button>
+				    <input type="text" class="form-control" placeholder = "이메일 주소" id="email">
+				    <button type="button" class="btn btn-primary duplicate-btn col-4" id="emailDuplicateBtn">중복 확인</button>
 				</div>
-				<input type="text" class="form-control input-form-join" placeholder = "성명">
+				<input type="text" class="form-control input-form-join" placeholder = "성명" id="realName">
 				<div class="d-flex input-form-join">
-				    <input type="text" class="form-control" placeholder = "닉네임">
-				    <button type="button" class="btn btn-primary duplicate-btn col-4">중복 확인</button>
+				    <input type="text" class="form-control" placeholder = "닉네임" id="nickName">
+				    <button type="button" class="btn btn-primary duplicate-btn col-4" id="nickNameDuplicateBtn">중복 확인</button>
 				</div>
-				<input type="password" class="form-control input-form-join" placeholder = "비밀번호">
+				<input type="password" class="form-control input-form-join" placeholder = "비밀번호" id="password">
 				
 				<div class="d-flex justify-content-center align-items-center">
 				    <div class="description-more-join text-center d-flex align-items-center">
-                        저희 서비스를 이용하는 사람이 회원님의 연락처 정보를 marondalstagram에 업로드 했을 수도 있습니다.
-                        더 알아보기
+				   		<div>
+	                        저희 서비스를 이용하는 사람이 회원님의 연락처 정보를 marondalstagram에 업로드 했을 수도 있습니다.
+	                        <a href="#">더 알아보기</a>
+                        </div>
                     </div>
 				</div>
 				
-				<button type = "button" class="btn btn-block btn-primary join-button">가입하기</button>
+				<button type = "button" class="btn btn-block btn-primary join-button" id="joinBtn">가입하기</button>
 				
 			</section>
 			
@@ -47,15 +49,24 @@
 		</div>
 		
 	</div>
+	<script>
+		$(document).ready(function(){
+			$("#joinBtn").on("click", function(){
+				let email = $("#email").val();
+				let realName = $("#realName").val();
+				let nickName = $("#nickName").val();
+				let password = $("#password").val();
+			}); // 가입하기 버튼 클릭 이벤트 끝
+		}) // 문서 끝
 	
+	
+	</script>
 	
 	<script
 	  src="https://code.jquery.com/jquery-3.7.1.min.js"
 	  integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
 	  crossorigin="anonymous">
 	</script>
-	
-	
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js" integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
