--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -34,7 +34,7 @@
             
             <section class="loginjoin border d-flex justify-content-center align-items-center">
                  <div>계정이 없으신가요?</div>
-                 <a href="#">회원가입</a>
+                 <a href="/marondalgram/user/join-view">회원가입</a>
             </section>
         </div>
     
