--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -21,7 +21,7 @@
                     <div class="description-join">친구들의 사진과 동영상을 보려면 로그인하세요</div>
                 </div>
                 
-                <input type="text" class="form-control email-form" placeholder = "닉네임 또는 이메일">
+                <input type="text" class="form-control email-form" placeholder = "이메일">
                 <input type="password" class="form-control input-form-join" placeholder = "비밀번호">
                 
                 <button type = "button" class="btn btn-block btn-primary join-button">가입하기</button>
