[배경민 - 학원]  - 게시글 만들기 레이아웃 추가 중

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -72,3 +72,22 @@
 .find-password{
 	margin-top : 26px;
 }
+
+#createWrap{
+	width : 745px;
+	height : 760px;
+	margin : 0 auto;
+	border-radius : 32px;
+	
+}
+
+#createHeader{
+	height : 61px;
+	border-bottom : solid 1px #757575;
+}
+
+.createcontents{
+	width: 50px;
+	height : 100px;
+	background-color : red;
+}
