[배경민 - 집]  - 게시글 추가 화면 레이아웃 구현 및 에러 해결  - 이미지 추가 화면 구현  - 입력한 이미지 확인 화면 구현  - 본문 입력화면 및 음악 선택 화면 구현 중

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -78,16 +78,56 @@
 	height : 760px;
 	margin : 0 auto;
 	border-radius : 32px;
-	
+	overflow: hidden
 }
 
 #createHeader{
-	height : 61px;
+	height : 60px;
 	border-bottom : solid 1px #757575;
 }
 
+.createHeaderText{
+	font-size : 24px;
+	font-weight : bold;
+}
+
 .createcontents{
-	width: 50px;
-	height : 100px;
-	background-color : red;
+	height : 699px;
+}
+
+.createcontentsSection{
+	width : 699px;
+	height : 699px;
+	overflow: hidden
+}
+
+#createTextWrap{
+	width : 1000px;
+	height : 760px;
+	margin : 0 auto;
+    border-radius : 32px;
+    overflow: hidden
+}
+
+.addimage{
+	font-size : 24px;
+}
+
+.imageCheck{
+	height: 699px;
+}
+
+.createTextProfileSection{
+	width : 301px;
+	height : 71px;
+}
+
+.createTextBodySection{
+	width : 301px;
+	height : 505px;
+}
+
+.createMusicSection{
+	width : 301px;
+	height : 122px;
 }
