--- a/src/main/resources/templates/post/createImage.html
+++ b/src/main/resources/templates/post/createImage.html
@@ -4,7 +4,25 @@
         xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
         layout:decorate="~{layouts/createdefault}">
         
-	<section layout:fragment="contents" class="createcontents">
-		
-	</section>
+        
+    <div layout:fragment="backBtn"></div>
+    
+    <div layout:fragment="nextBtn"></div>
+        
+    <section layout:fragment="contents" class="createcontents d-flex justify-content-center align-items-center">
+       <div>
+            <div class="d-flex justify-content-center">
+		        <svg xmlns="http://www.w3.org/2000/svg" width="131" height="131" fill="currentColor" class="bi bi-images" viewBox="0 0 16 16">
+			        <path d="M4.502 9a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3"/>
+			        <path d="M14.002 13a2 2 0 0 1-2 2h-10a2 2 0 0 1-2-2V5A2 2 0 0 1 2 3a2 2 0 0 1 2-2h10a2 2 0 0 1 2 2v8a2 2 0 0 1-1.998 2M14 2H4a1 1 0 0 0-1 1h9.002a2 2 0 0 1 2 2v7A1 1 0 0 0 15 11V3a1 1 0 0 0-1-1M2.002 4a1 1 0 0 0-1 1v8l2.646-2.354a.5.5 0 0 1 .63-.062l2.66 1.773 3.71-3.71a.5.5 0 0 1 .577-.094l1.777 1.947V5a1 1 0 0 0-1-1z"/>
+		        </svg>
+	        </div>
+	        <div class="mt-2">
+	           <span class="addimage">사진과 동영상을 추가하세요.</span>
+	        </div>
+	        <div class="mt-2 d-flex justify-content-center">
+	           <button type="button" class="btn btn-primary">컴퓨터에서 선택</button>
+	        </div>
+        </div>
+    </section>
 </html>
