--- a/src/main/resources/templates/user/join.html
+++ b/src/main/resources/templates/user/join.html
@@ -22,34 +22,37 @@
 				    <div class="description-join">친구들의 사진과 동영상을 보려면 가입하세요</div>
 				</div>
 				
-				<div class="d-flex email-form">
-				    <input type="text" class="form-control" placeholder = "이메일 주소" id="email">
-				    <button type="button" class="btn btn-primary duplicate-btn col-4" id="emailDuplicateBtn">중복 확인</button>
-				</div>
-				<div class="small text-success d-none" id="availableEmailText">사용가능한 이메일입니다.</div>
-				<div class="small text-danger d-none" id="duplicateEmailText">중복된 이메일입니다. 다른 이메일을 사용하세요.</div>
+				<form id="joinForm">
+					<div class="d-flex email-form">
+					    <input type="text" class="form-control" placeholder = "이메일 주소" id="email">
+					    <button type="button" class="btn btn-primary duplicate-btn col-4" id="emailDuplicateBtn">중복 확인</button>
+					</div>
+					<div class="small text-success d-none" id="availableEmailText">사용가능한 이메일입니다.</div>
+					<div class="small text-danger d-none" id="duplicateEmailText">중복된 이메일입니다. 다른 이메일을 사용하세요.</div>
+					
+					<input type="text" class="form-control input-form-join" placeholder = "성명" id="realName">
+					
+					<div class="d-flex input-form-join">
+					    <input type="text" class="form-control" placeholder = "닉네임" id="nickName">
+					    <button type="button" class="btn btn-primary duplicate-btn col-4" id="nickNameDuplicateBtn">중복 확인</button>
+					</div>
+					<div class="small text-success d-none" id="availableNickNameText">사용가능한 닉네임입니다.</div>
+	                <div class="small text-danger d-none" id="duplicateNickNameText">중복된 닉네임입니다. 다른 닉네임을 사용하세요.</div>
+					
+					<input type="password" class="form-control input-form-join" placeholder = "비밀번호" id="password">
 				
-				<input type="text" class="form-control input-form-join" placeholder = "성명" id="realName">
 				
-				<div class="d-flex input-form-join">
-				    <input type="text" class="form-control" placeholder = "닉네임" id="nickName">
-				    <button type="button" class="btn btn-primary duplicate-btn col-4" id="nickNameDuplicateBtn">중복 확인</button>
-				</div>
-				<div class="small text-success d-none" id="availableNickNameText">사용가능한 닉네임입니다.</div>
-                <div class="small text-danger d-none" id="duplicateNickNameText">중복된 닉네임입니다. 다른 닉네임을 사용하세요.</div>
-				
-				<input type="password" class="form-control input-form-join" placeholder = "비밀번호" id="password">
-				
-				<div class="d-flex justify-content-center align-items-center">
-				    <div class="description-more-join text-center d-flex align-items-center">
-				   		<div>
-	                        저희 서비스를 이용하는 사람이 회원님의 연락처 정보를 marondalstagram에 업로드 했을 수도 있습니다.
-	                        <a href="#">더 알아보기</a>
-                        </div>
-                    </div>
-				</div>
-				
-				<button type = "button" class="btn btn-block btn-primary join-button" id="joinBtn">가입하기</button>
+					<div class="d-flex justify-content-center align-items-center">
+					    <div class="description-more-join text-center d-flex align-items-center">
+					   		<div>
+		                        저희 서비스를 이용하는 사람이 회원님의 연락처 정보를 marondalstagram에 업로드 했을 수도 있습니다.
+		                        <a href="#">더 알아보기</a>
+	                        </div>
+	                    </div>
+					</div>
+					
+					<button type = "submit" class="btn btn-block btn-primary join-button" id="joinBtn">가입하기</button>
+				</form>
 				
 			</section>
 			
@@ -74,6 +77,30 @@
 	
 	
 	   $(document).ready(function(){
+		   
+		   // 전역변수
+		   var checkDuplicateEmail = false;
+		   var idDuplicateEmail = false;
+		   var checkDuplicateNickName = false;
+		   var idDuplicateNickName = false;
+		   
+		   // 이메일 입력이 바뀌면 중복체크 초기화
+		   $("#email").on("input", function(){
+			   	checkDuplicateEmail = false;
+				idDuplicateEmail = false;
+			   
+				$("#availableEmailText").addClass("d-none");
+				$("#duplicateEmailText").addClass("d-none");
+		   }); // 이메일 입력 이벤트 종료
+		   
+			// 닉네임 입력이 바뀌면 중복체크 초기화
+		   	$("#nickName").on("input", function(){
+		   		checkDuplicateNickName = false;
+				idDuplicateNickName = false;
+			   
+				$("#availableNickNameText").addClass("d-none");
+                $("#duplicateNickNameText").addClass("d-none");
+		   	}); // 닉네임 입력 이벤트 종료
 		   
 		   // 닉네임 영문 및 숫자만 포함하게 하는 이벤트
 		   $("#nickName").on("keyup", function(){
@@ -101,12 +128,16 @@
 				, url : "/marondalgram/user/duplicate-email"
 				, data : {"email" : email}
 				, success : function(data){
+					checkDuplicateEmail = true;
+					isDuplicateEmail = data.isDuplicate;
 					if(data.isDuplicate){
 						$("#availableEmailText").addClass("d-none");
 						$("#duplicateEmailText").removeClass("d-none");
+						
 					}else{
 						$("#availableEmailText").removeClass("d-none");
 						$("#duplicateEmailText").addClass("d-none");
+						
 					}
 				}
 				, error : function(){
@@ -130,9 +161,12 @@
                 , url : "/marondalgram/user/duplicate-nickName"
                 , data : {"nickName" : nickName}
                 , success : function(data){
+                	checkDuplicateNickName = true;
+                	isDuplicateNickName = data.isDuplicate;
                     if(data.isDuplicate){
                         $("#availableNickNameText").addClass("d-none");
                         $("#duplicateNickNameText").removeClass("d-none");
+                        
                     }else{
                         $("#availableNickNameText").removeClass("d-none");
                         $("#duplicateNickNameText").addClass("d-none");
@@ -145,11 +179,40 @@
             }); // 닉네임 중복 버튼 추가 이벤트 종료
 			
 			// 회원가입 버튼 이벤트
-			$("#joinBtn").on("click", function(){
+			$("#joinForm").on("submit", function(e){
+				
+				// submit 이벤트가 가진 기본 기능 취소시키기
+				e.preventDefault();
+				
 				let email = $("#email").val();
 				let realName = $("#realName").val();
 				let nickName = $("#nickName").val();
 				let password = $("#password").val();
+				
+				// 이메일 중복확인을 진행하지 않은 경우
+				if(!checkDuplicateEmail){
+					alert("이메일 중복을 확인하세요")
+					return ;
+				}
+				
+				// 이메일이 중복된 경우
+				if(isDuplicateEmail){
+					alert("아이디 중복을 확인해주세요.")
+					return ;
+				}
+				
+				// 닉네임 중복확인을 진행하지 않은 경우
+				if(!checkDuplicateNickName){
+					alert("닉네임 중복을 확인하세요")
+					return ;
+				}
+				
+				// 닉네임이 중복된 경우
+				if(isDuplicateNickName){
+					alert("닉네임 중복을 확인해주세요.")
+					return ;
+				}
+				
 				
 				// 유효성 검사
 				if(email == ""){
@@ -172,34 +235,6 @@
 					return ;
 				}
 				
-				
-				// 이메일 중복 글자 확인(중복가입 안되게)
-				if($("#availableEmailText").hasClass("d-none") && !$("#duplicateEmailText").hasClass("d-none")){
-					// 이메일 가입 불가능
-					alert("이메일이 중복되었습니다!");
-					return ;
-				} else if(!$("#availableEmailText").hasClass("d-none") && $("#duplicateEmailText").hasClass("d-none")){
-					// 이메일 가입 가능
-					
-				}else if($("#availableEmailText").hasClass("d-none") && $("#duplicateEmailText").hasClass("d-none")){
-					// 이메일 중복 미확인
-					alert("이메일이 중복되었는지 확인하세요.");
-                    return ;
-				}
-				
-				// 닉네임 중복 글자 확인(중복가입 안되게)
-                if($("#availableNickNameText").hasClass("d-none") && !$("#duplicateNickNameText").hasClass("d-none")){
-                    // 닉네임 가입 불가능
-                    alert("닉네임이 중복되었습니다!");
-                    return ;
-                } else if(!$("#availableNickNameText").hasClass("d-none") && $("#duplicateNickNameText").hasClass("d-none")){
-                    // 닉네임 가입 가능
-                    
-                }else if($("#availableNickNameText").hasClass("d-none") && $("#duplicateNickNameText").hasClass("d-none")){
-                    // 닉네임 중복 미확인
-                    alert("닉네임이 중복되었는지 확인하세요.");
-                    return ;
-                }
 				
 				// 회원가입 ajax
 				$.ajax({
