--- a/src/main/resources/templates/layouts/default.html
+++ b/src/main/resources/templates/layouts/default.html
@@ -11,9 +11,9 @@
 </head>
 <body>
 	
-	<div id="wrap" class="d-flex bg-primary">
-		<th:block th:replace="~{fragments/menu :: menu}"></th:block>
-		<th:block layout:fragment = "mainContents"></th:block>
+	<div id="wrap" class="d-flex">
+			<th:block th:replace="~{fragments/menu :: menu}"></th:block>
+			<th:block layout:fragment = "mainContents"></th:block>
 	</div>
 	
 	
