--- a/src/main/resources/templates/post/timeline.html
+++ b/src/main/resources/templates/post/timeline.html
@@ -4,7 +4,260 @@
         xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
         layout:decorate="~{layouts/default}">
         
-    <section layout:fragment="mainContents">
+    <section layout:fragment="mainContents" class="mainContents d-flex justify-content-center">
+    	<div class="PostSection d-flex justify-content-center">
+    		<div>
+	    		<!-- 맨 위 여백 -->
+	    		<div class=" p-5"></div>
+	    		<!-- 게시글 1개 -->
+	    		<div class="timelinePost" >
+	    			<!-- 닉네임 부분 -->
+	    			<div class="nickNameHeaderSection d-flex align-items-center pl-2">
+	    				<div class="d-flex  align-items-center">
+	    					<!-- 프로필 사진 -->
+		    				<div class="smallProfile">
+		    					<img class="smallProfileImage" src="https://cdn.pixabay.com/photo/2024/09/03/09/03/deer-9018759_1280.jpg">
+		    				</div>
+		    				<!-- 닉네임, 음악 부분 -->
+		    				<div class="ml-2">
+		    					<div  class="subHeadingTwenty">shoes_12</div>
+		    					<div class="d-flex align-items-center">
+		    						<div>
+		    							<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-music-note-beamed" viewBox="0 0 16 16">
+											<path d="M6 13c0 1.105-1.12 2-2.5 2S1 14.105 1 13s1.12-2 2.5-2 2.5.896 2.5 2m9-2c0 1.105-1.12 2-2.5 2s-2.5-.895-2.5-2 1.12-2 2.5-2 2.5.895 2.5 2"/>
+											<path fill-rule="evenodd" d="M14 11V2h1v9zM6 3v10H5V3z"/>
+											<path d="M5 2.905a1 1 0 0 1 .9-.995l8-.8a1 1 0 0 1 1.1.995V3L5 4z"/>
+										</svg>
+		    						</div>
+		    						<div class="smallTextSecondary">Music</div>
+		    					</div>
+		    				</div>
+	    				</div>
+	    			</div>
+	    			<!-- 게시글 사진 부분 -->
+	    			<div class="timelinePostImageSection">
+	    				<img src = "https://cdn.pixabay.com/photo/2024/09/03/09/03/deer-9018759_1280.jpg" class="timelinePostImage">
+	    			</div>
+	    			<!-- 부가기능 부분 -->
+	    			<div class="timelineAdditionalSection d-flex justify-content-between align-items-center pl-2 pr-2">
+	    				<div class="d-flex">
+	    					<!-- 좋아요 -->
+	    					<div>
+		    					<svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
+									<path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15"/>
+								</svg>
+							</div>
+							<!-- 댓글 -->
+							<div class="ml-1">
+								<svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-chat" viewBox="0 0 16 16">
+									<path d="M2.678 11.894a1 1 0 0 1 .287.801 11 11 0 0 1-.398 2c1.395-.323 2.247-.697 2.634-.893a1 1 0 0 1 .71-.074A8 8 0 0 0 8 14c3.996 0 7-2.807 7-6s-3.004-6-7-6-7 2.808-7 6c0 1.468.617 2.83 1.678 3.894m-.493 3.905a22 22 0 0 1-.713.129c-.2.032-.352-.176-.273-.362a10 10 0 0 0 .244-.637l.003-.01c.248-.72.45-1.548.524-2.319C.743 11.37 0 9.76 0 8c0-3.866 3.582-7 8-7s8 3.134 8 7-3.582 7-8 7a9 9 0 0 1-2.347-.306c-.52.263-1.639.742-3.468 1.105"/>
+								</svg>
+							</div>
+							<!-- 공유 -->
+							<div class="ml-1">
+								<svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-share" viewBox="0 0 16 16">
+									<path d="M13.5 1a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3M11 2.5a2.5 2.5 0 1 1 .603 1.628l-6.718 3.12a2.5 2.5 0 0 1 0 1.504l6.718 3.12a2.5 2.5 0 1 1-.488.876l-6.718-3.12a2.5 2.5 0 1 1 0-3.256l6.718-3.12A2.5 2.5 0 0 1 11 2.5m-8.5 4a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3m11 5.5a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3"/>
+								</svg>
+							</div>
+	    				</div>
+	    				<div>
+	    					<!-- 북마크 -->
+	    					<svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-bookmark" viewBox="0 0 16 16">
+								<path d="M2 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v13.5a.5.5 0 0 1-.777.416L8 13.101l-5.223 2.815A.5.5 0 0 1 2 15.5zm2-1a1 1 0 0 0-1 1v12.566l4.723-2.482a.5.5 0 0 1 .554 0L13 14.566V2a1 1 0 0 0-1-1z"/>
+							</svg>
+	    				</div>
+	    			</div>
+	    			<!-- 좋아요 갯수 부분 -->
+	    			<div class="timelineAdditionalSection d-flex align-items-center pl-2">
+	    				<div class="subHeadingTwenty">좋아요 8565개</div>
+	    			</div>
+	    			<!-- 본문 부분 -->
+	    			<div class="timelineAdditionalSection d-flex align-items-center pl-2">
+	    				<div class="subHeadingTwenty">shoes_12</div>
+	    				<div class="subHeadingTwenty ml-2">신발 팔아요~</div>
+	    			</div>
+	    			<!-- 댓글 부분 -->
+	    			<div class="timelineCommentSection pl-2 pt-2">
+	    				<!-- 댓글 접기 펴기 -->
+	    				<div class="smallTextSecondary">댓글 5456개 모두 보기</div>
+	    				<!-- 메인 댓글 -->
+	    				<div class="subHeadingTwenty mt-2 d-flex">
+	    					<div>idjse_22</div>
+	    					<div class="ml-2">우와 사고시퍼요~~</div>
+	    				</div>
+	    				<div class="d-flex mt-2">
+	    					<input type="text" class="commentInput flex-fill mr-2" placeholder="댓글 달기">
+	    				</div>
+	    			</div>
+	    		</div>
+	    		
+	    		<!-- 게시글 1개 -->
+	    		<div class="timelinePost bg-danger" >
+	    			<!-- 닉네임 부분 -->
+	    			<div class="nickNameHeaderSection d-flex align-items-center pl-2">
+	    				<div class="d-flex  align-items-center">
+	    					<!-- 프로필 사진 -->
+		    				<div class="smallProfile">
+		    					<img class="smallProfileImage" src="https://cdn.pixabay.com/photo/2024/09/03/09/03/deer-9018759_1280.jpg">
+		    				</div>
+		    				<!-- 닉네임, 음악 부분 -->
+		    				<div class="ml-2">
+		    					<div  class="subHeadingTwenty">shoes_12</div>
+		    					<div class="d-flex align-items-center">
+		    						<div>
+		    							<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-music-note-beamed" viewBox="0 0 16 16">
+											<path d="M6 13c0 1.105-1.12 2-2.5 2S1 14.105 1 13s1.12-2 2.5-2 2.5.896 2.5 2m9-2c0 1.105-1.12 2-2.5 2s-2.5-.895-2.5-2 1.12-2 2.5-2 2.5.895 2.5 2"/>
+											<path fill-rule="evenodd" d="M14 11V2h1v9zM6 3v10H5V3z"/>
+											<path d="M5 2.905a1 1 0 0 1 .9-.995l8-.8a1 1 0 0 1 1.1.995V3L5 4z"/>
+										</svg>
+		    						</div>
+		    						<div class="smallTextSecondary">Music</div>
+		    					</div>
+		    				</div>
+	    				</div>
+	    			</div>
+	    			<!-- 게시글 사진 부분 -->
+	    			<div class="timelinePostImageSection">
+	    				<img src = "https://cdn.pixabay.com/photo/2024/09/03/09/03/deer-9018759_1280.jpg" class="timelinePostImage">
+	    			</div>
+	    			<!-- 부가기능 부분 -->
+	    			<div class="timelineAdditionalSection d-flex justify-content-between align-items-center pl-2 pr-2">
+	    				<div class="d-flex">
+	    					<!-- 좋아요 -->
+	    					<div>
+		    					<svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
+									<path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15"/>
+								</svg>
+							</div>
+							<!-- 댓글 -->
+							<div class="ml-1">
+								<svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-chat" viewBox="0 0 16 16">
+									<path d="M2.678 11.894a1 1 0 0 1 .287.801 11 11 0 0 1-.398 2c1.395-.323 2.247-.697 2.634-.893a1 1 0 0 1 .71-.074A8 8 0 0 0 8 14c3.996 0 7-2.807 7-6s-3.004-6-7-6-7 2.808-7 6c0 1.468.617 2.83 1.678 3.894m-.493 3.905a22 22 0 0 1-.713.129c-.2.032-.352-.176-.273-.362a10 10 0 0 0 .244-.637l.003-.01c.248-.72.45-1.548.524-2.319C.743 11.37 0 9.76 0 8c0-3.866 3.582-7 8-7s8 3.134 8 7-3.582 7-8 7a9 9 0 0 1-2.347-.306c-.52.263-1.639.742-3.468 1.105"/>
+								</svg>
+							</div>
+							<!-- 공유 -->
+							<div class="ml-1">
+								<svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-share" viewBox="0 0 16 16">
+									<path d="M13.5 1a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3M11 2.5a2.5 2.5 0 1 1 .603 1.628l-6.718 3.12a2.5 2.5 0 0 1 0 1.504l6.718 3.12a2.5 2.5 0 1 1-.488.876l-6.718-3.12a2.5 2.5 0 1 1 0-3.256l6.718-3.12A2.5 2.5 0 0 1 11 2.5m-8.5 4a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3m11 5.5a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3"/>
+								</svg>
+							</div>
+	    				</div>
+	    				<div>
+	    					<!-- 북마크 -->
+	    					<svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-bookmark" viewBox="0 0 16 16">
+								<path d="M2 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v13.5a.5.5 0 0 1-.777.416L8 13.101l-5.223 2.815A.5.5 0 0 1 2 15.5zm2-1a1 1 0 0 0-1 1v12.566l4.723-2.482a.5.5 0 0 1 .554 0L13 14.566V2a1 1 0 0 0-1-1z"/>
+							</svg>
+	    				</div>
+	    			</div>
+	    			<!-- 좋아요 갯수 부분 -->
+	    			<div class="timelineAdditionalSection d-flex align-items-center pl-2">
+	    				<div class="subHeadingTwenty">좋아요 8565개</div>
+	    			</div>
+	    			<!-- 본문 부분 -->
+	    			<div class="timelineAdditionalSection d-flex align-items-center pl-2">
+	    				<div class="subHeadingTwenty">shoes_12</div>
+	    				<div class="subHeadingTwenty ml-2">신발 팔아요~</div>
+	    			</div>
+	    			<!-- 댓글 부분 -->
+	    			<div class="timelineCommentSection pl-2 pt-2">
+	    				<!-- 댓글 접기 펴기 -->
+	    				<div class="smallTextSecondary">댓글 5456개 모두 보기</div>
+	    				<!-- 메인 댓글 -->
+	    				<div class="subHeadingTwenty mt-2 d-flex">
+	    					<div>idjse_22</div>
+	    					<div class="ml-2">우와 사고시퍼요~~</div>
+	    				</div>
+	    				<div class="d-flex mt-2">
+	    					<input type="text" class="commentInput flex-fill mr-2" placeholder="댓글 달기">
+	    				</div>
+	    			</div>
+	    		</div>
+	    		
+	    		<!-- 게시글 1개 -->
+	    		<div class="timelinePost bg-danger" >
+	    			<!-- 닉네임 부분 -->
+	    			<div class="nickNameHeaderSection d-flex align-items-center pl-2">
+	    				<div class="d-flex  align-items-center">
+	    					<!-- 프로필 사진 -->
+		    				<div class="smallProfile">
+		    					<img class="smallProfileImage" src="https://cdn.pixabay.com/photo/2024/09/03/09/03/deer-9018759_1280.jpg">
+		    				</div>
+		    				<!-- 닉네임, 음악 부분 -->
+		    				<div class="ml-2">
+		    					<div  class="subHeadingTwenty">shoes_12</div>
+		    					<div class="d-flex align-items-center">
+		    						<div>
+		    							<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-music-note-beamed" viewBox="0 0 16 16">
+											<path d="M6 13c0 1.105-1.12 2-2.5 2S1 14.105 1 13s1.12-2 2.5-2 2.5.896 2.5 2m9-2c0 1.105-1.12 2-2.5 2s-2.5-.895-2.5-2 1.12-2 2.5-2 2.5.895 2.5 2"/>
+											<path fill-rule="evenodd" d="M14 11V2h1v9zM6 3v10H5V3z"/>
+											<path d="M5 2.905a1 1 0 0 1 .9-.995l8-.8a1 1 0 0 1 1.1.995V3L5 4z"/>
+										</svg>
+		    						</div>
+		    						<div class="smallTextSecondary">Music</div>
+		    					</div>
+		    				</div>
+	    				</div>
+	    			</div>
+	    			<!-- 게시글 사진 부분 -->
+	    			<div class="timelinePostImageSection">
+	    				<img src = "https://cdn.pixabay.com/photo/2024/09/03/09/03/deer-9018759_1280.jpg" class="timelinePostImage">
+	    			</div>
+	    			<!-- 부가기능 부분 -->
+	    			<div class="timelineAdditionalSection d-flex justify-content-between align-items-center pl-2 pr-2">
+	    				<div class="d-flex">
+	    					<!-- 좋아요 -->
+	    					<div>
+		    					<svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
+									<path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15"/>
+								</svg>
+							</div>
+							<!-- 댓글 -->
+							<div class="ml-1">
+								<svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-chat" viewBox="0 0 16 16">
+									<path d="M2.678 11.894a1 1 0 0 1 .287.801 11 11 0 0 1-.398 2c1.395-.323 2.247-.697 2.634-.893a1 1 0 0 1 .71-.074A8 8 0 0 0 8 14c3.996 0 7-2.807 7-6s-3.004-6-7-6-7 2.808-7 6c0 1.468.617 2.83 1.678 3.894m-.493 3.905a22 22 0 0 1-.713.129c-.2.032-.352-.176-.273-.362a10 10 0 0 0 .244-.637l.003-.01c.248-.72.45-1.548.524-2.319C.743 11.37 0 9.76 0 8c0-3.866 3.582-7 8-7s8 3.134 8 7-3.582 7-8 7a9 9 0 0 1-2.347-.306c-.52.263-1.639.742-3.468 1.105"/>
+								</svg>
+							</div>
+							<!-- 공유 -->
+							<div class="ml-1">
+								<svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-share" viewBox="0 0 16 16">
+									<path d="M13.5 1a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3M11 2.5a2.5 2.5 0 1 1 .603 1.628l-6.718 3.12a2.5 2.5 0 0 1 0 1.504l6.718 3.12a2.5 2.5 0 1 1-.488.876l-6.718-3.12a2.5 2.5 0 1 1 0-3.256l6.718-3.12A2.5 2.5 0 0 1 11 2.5m-8.5 4a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3m11 5.5a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3"/>
+								</svg>
+							</div>
+	    				</div>
+	    				<div>
+	    					<!-- 북마크 -->
+	    					<svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-bookmark" viewBox="0 0 16 16">
+								<path d="M2 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v13.5a.5.5 0 0 1-.777.416L8 13.101l-5.223 2.815A.5.5 0 0 1 2 15.5zm2-1a1 1 0 0 0-1 1v12.566l4.723-2.482a.5.5 0 0 1 .554 0L13 14.566V2a1 1 0 0 0-1-1z"/>
+							</svg>
+	    				</div>
+	    			</div>
+	    			<!-- 좋아요 갯수 부분 -->
+	    			<div class="timelineAdditionalSection d-flex align-items-center pl-2">
+	    				<div class="subHeadingTwenty">좋아요 8565개</div>
+	    			</div>
+	    			<!-- 본문 부분 -->
+	    			<div class="timelineAdditionalSection d-flex align-items-center pl-2">
+	    				<div class="subHeadingTwenty">shoes_12</div>
+	    				<div class="subHeadingTwenty ml-2">신발 팔아요~</div>
+	    			</div>
+	    			<!-- 댓글 부분 -->
+	    			<div class="timelineCommentSection pl-2 pt-2">
+	    				<!-- 댓글 접기 펴기 -->
+	    				<div class="smallTextSecondary">댓글 5456개 모두 보기</div>
+	    				<!-- 메인 댓글 -->
+	    				<div class="subHeadingTwenty mt-2 d-flex">
+	    					<div>idjse_22</div>
+	    					<div class="ml-2">우와 사고시퍼요~~</div>
+	    				</div>
+	    				<div class="d-flex mt-2">
+	    					<input type="text" class="commentInput flex-fill mr-2" placeholder="댓글 달기">
+	    				</div>
+	    			</div>
+	    		</div>
+	    		
+	    		
+    		</div>
+    	</div>
     	
     </section>
     
