--- a/src/main/resources/templates/fragments/menu.html
+++ b/src/main/resources/templates/fragments/menu.html
@@ -3,7 +3,7 @@
 		<th:block th:fragment = "menu">
 			<div class="mainMenuSection">
 				<div class="menuLogoSection d-flex align-items-center">
-					<div class = "logoheader ml-3">Marondalgram</div>
+					<div class = "ml-3"><a class="logoheader " href="/marondalgram/post/timeline-view">Marondalgram</a></div>
 				</div>
 				<nav class="mainMenu">
 					<ul class="nav flex-column ml-3 mt-3">
@@ -13,7 +13,7 @@
 									<path d="M8.354 1.146a.5.5 0 0 0-.708 0l-6 6A.5.5 0 0 0 1.5 7.5v7a.5.5 0 0 0 .5.5h4.5a.5.5 0 0 0 .5-.5v-4h2v4a.5.5 0 0 0 .5.5H14a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.146-.354L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293zM2.5 14V7.707l5.5-5.5 5.5 5.5V14H10v-4a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5v4z"/>
 								</svg>
 							</div>
-							<a class="nav-link menuText" href="#">홈</a>
+							<a class="nav-link menuText" href="/marondalgram/post/timeline-view">홈</a>
 						</li>
 						<li class="nav-item d-flex mt-2">
 							<div class="menuIconSection">
