--- a/src/main/resources/templates/fragments/menu.html
+++ b/src/main/resources/templates/fragments/menu.html
@@ -64,7 +64,7 @@
 									<path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4"/>
 								</svg>
 							</div>
-							<a class="nav-link menuText" href="#">만들기</a>
+							<a class="nav-link menuText" href="http://localhost:8080/marondalgram/post/create/image-view">만들기</a>
 						</li>
 						<li class="nav-item d-flex mt-2">
 							<div class="menuIconSection">
