--- a/src/main/resources/templates/fragments/menu.html
+++ b/src/main/resources/templates/fragments/menu.html
@@ -69,7 +69,7 @@
 						<li class="nav-item d-flex mt-2">
 							<div class="menuIconSection">
 								<div class="smallProfile">
-									<img src="https://cdn.pixabay.com/photo/2024/09/03/09/03/deer-9018759_1280.jpg" class="smallProfimeImage">
+									<img th:src="${user.profileImagePath}" class="smallProfimeImage">
 								</div>
 							</div>
 							<a class="nav-link menuText" href="#">프로필</a>
